2007-02-15  Richard B. Kreckel  <kreckel@ginac.de>

	* m4/cc.m4 (CL_HAVE_ATTRIBUTE_FLATTEN): More robust definition allows...
	* src/base/cl_maybe_inline.h (CL_FLATTEN): ...simplification here.

2007-02-10  Richard B. Kreckel  <kreckel@ginac.de>

	* autoconf/ltmain.sh: Update to libtool-1.5.26.
	* autoconf/config.guess: Likewise.
	* autoconf/config.sub: Likewise.
	* m4/libtool.m4: Likewise.

2007-02-09  Alexei Sheplyakov  <varg@theor.jinr.ru>
            Richard B. Kreckel  <kreckel@ginac.de>

	Avoid compiler warning about ignored 'flatten' attribute directive:
	* m4/cc.m4 (CL_ATTRIBUTE_FLATTEN): New macro...
	* configure.ac: ...used here...
	* include/cln/config.h.in: ...defining CL_HAVE_ATTRIBUTE_FLATTEN,...
	* src/base/cl_maybe_inline.h: ...used to prevent a warning here.

2007-02-07  Richard B. Kreckel  <kreckel@ginac.de>

	* include/cln/integer.h: Enable modifying operators by default.
	* include/cln/rational.h: Likewise.
	* include/cln/sfloat.h: Likewise.
	* include/cln/ffloat.h: Likewise.
	* include/cln/dfloat.h: Likewise.
	* include/cln/lfloat.h: Likewise.
	* include/cln/float.h: Likewise.
	* include/cln/real.h: Likewise.
	* include/cln/complex.h: Likewise.
	* doc/cln.texi: Document that.

2007-02-06  Richard B. Kreckel  <kreckel@ginac.de>

	Fix crash in output of huge numbers:
	* src/integer/conv/cl_I_to_digits.cc: Make erglen uintC.
	* src/integer/output/cl_I_print_string.cc: Make B_baselen uintC.

2007-02-04  Richard B. Kreckel  <kreckel@ginac.de>

	Fix cl_F output of more than 2^32 decimal digits:
	* src/base/string/cl_sstring.cc (cl_sstring): make len uintC.
	* src/base/string/cl_sstring.h: Likewise.

2007-01-23  Bruno Haible  <bruno@clisp.org>

	Allow 64-bit builds on MacOS X 10.5.
	* m4/general.m4 (CL_CANONICAL_HOST_CPU): Test for x86_64 CPU if
	"uname -m" returns "i386".
	Reported by Ron Garret <ron@flownet.com>.

2007-01-20  Bruno Haible  <bruno@clisp.org>

	Avoid some gcc warnings.